# nxfvars

./: .gitignore  LICENSE  README.md  README.rst  main.nf  pyproject.toml
.github/workflows/: pytest-nxfvars-python.yml  pytest-workflow-examples.yml
data/: test_input.txt
example/: main.nf  nxfvars.nf  test.nf
example/data/: test_notebook.ipynb
example/lib/: Nxf.groovy
example/results/result_notebook/: test_notebook.html
example/results/result_script/: result_script.txt
examples/nxfvars_papermill/: main.nf
examples/nxfvars_python_notebook/: main.nf  notebook.ipynb
examples/nxfvars_python_script/: main.nf  test.nf
examples/papermill/: main.nf  nextflow.config  notebook.ipynb  nxfvars.nf
examples/rmarkdown/: main.nf  notebook.Rmd  report.html
lang/Python/: README.rst  pyproject.toml
lang/Python/nxfvars/: __init__.py  _compat.py  _metadata.py  _params_handler.py  cli.py  execute.py
lang/Python/nxfvars/tests/: __init__.py  test_execute.py  test_nxfvars.py
lang/Python/nxfvars/tests/testdata/: notebook.ipynb  notebook.py  params1.yml  params2.yml
lang/nextflow/: nxfvars.nf
modules/: nxf.nf
nxfvars/: __init__.py  nxf_var_handler.py
tests/: nextflow.config  test.yml
