[build-system]
requires = [
    'flit_core >=2,<4',
    'setuptools_scm',
    'pytoml',
    'wheel',
    'importlib_metadata>=0.7; python_version < "3.8"'
]
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'nxfvars'
author = 'Gregor Sturm'
author-email = 'gregor.sturm@i-med.ac.at'
home-page = 'https://github.com/grst/nxfvars'
description-file = "README.rst"
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
]
requires-python = '>= 3.6'
requires = [
    'setuptools_scm',
    'pytoml',
    'importlib_metadata>=0.7; python_version < "3.8"',
]

# [tool.flit.metadata.requires-extra]
# doc = [
#     'sphinx>=3.0.1,<3.1',
#     'sphinx_autodoc_typehints>=1.8.0',
#     'sphinx_rtd_theme>=0.4,<0.5',
#     'typing_extensions; python_version < "3.8"',  # for `Literal`
# ]

# [tool.flit.metadata.urls]
# Documentation = 'https://icbi-lab.github.io/scirpy/'

[tool.setuptools_scm]
git_describe_command = "git describe --dirty --tags --long --match v*.*.*"
