[build-system]
requires = [
    'flit_core >=2,<4',
    'pytoml',
    'wheel',
]
build-backend = 'flit_core.buildapi'

[tool.flit.metadata]
module = 'nxfvars'
author = 'Gregor Sturm'
author-email = 'gregor.sturm@i-med.ac.at'
home-page = 'https://github.com/grst/nxfvars'
description-file = "README.rst"
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
]
requires-python = '>= 3.8'
requires = [
    'pytoml',
    'pyyaml',
    'jupytext',
    'nbconvert>=4.2',
    'ipykernel'
]
[tool.flit.metadata.requires-extra]
test = [
    'pytest',
    'black',
]
[tool.flit.scripts]
nxfvars = "nxfvars.cli:main"